<resources>
    <string name="app_name">MVP All Done</string>

    <!--    IntroSliderActivity   -->
    <string name="intro_title_one">Intro Slider One</string>
    <string name="intro_title_two">Intro Slider Two</string>
    <string name="intro_title_three">Intro Slider Three</string>
    <string name="intro_desc_one">Here comes the description for the intro slider activity ONE</string>
    <string name="intro_desc_two">Here comes the description for the intro slider activity TWO</string>
    <string name="intro_desc_three">Here comes the description for the intro slider activity THREE</string>

    <string name="session_expired">Session Expired</string>
    <string name="splash">Splash</string>
    <string name="no_internet_available">No Internet Available</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_mobile">Need only 10 numbers</string>
    <string name="enter_password">Alpha numeric, 1 caps, 1 special character</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
</resources>
