<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyLight"
    android:padding="40dp"
    tools:context=".view.activity.AuthenticationActivity">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/cvMobileNumberContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_forgot_pass" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvMobileNumberContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etMobileNumber"
                style="@style/MyEditText"
                android:drawableStart="@drawable/ic_call_24"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10" />

        </android.support.design.widget.TextInputLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btSend"
        style="@style/MyButton.PrimaryCured"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvMobileNumberContainer" />

</android.support.constraint.ConstraintLayout>